# Suicide-Prediction

./: .gitignore  DataAnalysis.ipynb  README.md  pyproject.toml
raw_data/: MANIFEST.TXT  w1context.sas7bdat  w1context_fmt_data.sas7bdat  w1inhome_fmt_data.sas7bdat  w1network_fmt_data.sas7bdat  w1weight.sas7bdat
